--- a/src/main/java/GUI/LandingPageLogin.form
+++ b/src/main/java/GUI/LandingPageLogin.form
@@ -1,13 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.LandingPageLogin">
-  <grid id="27dc6" row-count="1" column-count="1" layout-manager="GridLayoutManager">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="panel1" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+      <xy x="41" y="20" width="800" height="600"/>
     </constraints>
-    <properties/>
+    <properties>
+      <maximumSize width="800" height="600"/>
+      <minimumSize width="800" height="600"/>
+      <preferredSize width="800" height="600"/>
+    </properties>
     <border type="none"/>
-    <children/>
+    <children>
+      <grid id="6ac87" binding="topPanel" layout-manager="FlowLayout" hgap="5" vgap="90" flow-align="1">
+        <constraints/>
+        <properties>
+          <maximumSize width="800" height="150"/>
+          <minimumSize width="800" height="150"/>
+          <opaque value="true"/>
+          <preferredSize width="800" height="150"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="82cb6" class="javax.swing.JLabel" binding="mainText">
+            <constraints/>
+            <properties>
+              <alignmentY value="0.5"/>
+              <enabled value="true"/>
+              <font name="Droid Sans Mono" size="40" style="1"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <opaque value="false"/>
+              <text value="Bentornato!"/>
+              <verticalAlignment value="0"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="c5341" binding="midPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints/>
+        <properties>
+          <maximumSize width="800" height="250"/>
+          <minimumSize width="800" height="250"/>
+          <preferredSize width="800" height="250"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <grid id="d4af3" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints/>
+            <properties>
+              <maximumSize width="400" height="75"/>
+              <minimumSize width="400" height="75"/>
+              <preferredSize width="400" height="75"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="f41da" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font name="Droid Sans Mono" size="16" style="0"/>
+                  <text value="Email / Username"/>
+                </properties>
+              </component>
+              <component id="dde66" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <font name="Droid Sans Mono" size="16" style="0"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+        </children>
+      </grid>
+    </children>
   </grid>
 </form>
