--- a/src/main/java/GUI/LandingPageLogin.form
+++ b/src/main/java/GUI/LandingPageLogin.form
@@ -11,7 +11,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="6ac87" binding="topPanel" layout-manager="FlowLayout" hgap="5" vgap="90" flow-align="1">
+      <grid id="6ac87" binding="topPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints/>
         <properties>
           <maximumSize width="800" height="150"/>
@@ -22,7 +22,7 @@
         <border type="none"/>
         <children>
           <component id="82cb6" class="javax.swing.JLabel" binding="mainText">
-            <constraints/>
+            <constraints border-constraint="Center"/>
             <properties>
               <alignmentY value="0.5"/>
               <enabled value="true"/>
@@ -31,12 +31,22 @@
               <horizontalTextPosition value="0"/>
               <opaque value="false"/>
               <text value="Bentornato!"/>
-              <verticalAlignment value="0"/>
+              <verticalAlignment value="3"/>
+              <verticalTextPosition value="3"/>
+            </properties>
+          </component>
+          <component id="fdd61" class="javax.swing.JLabel" binding="subText">
+            <constraints border-constraint="South"/>
+            <properties>
+              <font name="Droid Sans" size="20" style="2"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <text value="Inserisci email e password per iniziare..."/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="c5341" binding="midPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+      <grid id="c5341" binding="midPanel" layout-manager="FlowLayout" hgap="5" vgap="10" flow-align="1">
         <constraints/>
         <properties>
           <maximumSize width="800" height="250"/>
@@ -45,7 +55,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="d4af3" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="d4af3" binding="emailForm" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints/>
             <properties>
@@ -61,10 +71,10 @@
                 </constraints>
                 <properties>
                   <font name="Droid Sans Mono" size="16" style="0"/>
-                  <text value="Email / Username"/>
+                  <text value="Email"/>
                 </properties>
               </component>
-              <component id="dde66" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+              <component id="dde66" class="javax.swing.JTextField" binding="emailField">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -72,6 +82,39 @@
                 </constraints>
                 <properties>
                   <font name="Droid Sans Mono" size="16" style="0"/>
+                  <text value=""/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="272d4" binding="passwordForm" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints/>
+            <properties>
+              <maximumSize width="400" height="75"/>
+              <minimumSize width="400" height="75"/>
+              <preferredSize width="400" height="75"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="b8fa1" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font name="Droid Sans Mono" size="16" style="0"/>
+                  <text value="Email"/>
+                </properties>
+              </component>
+              <component id="89cf" class="javax.swing.JTextField" binding="passwordField">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <font name="Droid Sans Mono" size="16" style="0"/>
+                  <text value=""/>
                 </properties>
               </component>
             </children>
