--- a/src/main/java/GUI/LandingPageLogin.form
+++ b/src/main/java/GUI/LandingPageLogin.form
@@ -14,10 +14,10 @@
       <grid id="6ac87" binding="topPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints/>
         <properties>
-          <maximumSize width="800" height="150"/>
-          <minimumSize width="800" height="150"/>
+          <maximumSize width="800" height="180"/>
+          <minimumSize width="800" height="180"/>
           <opaque value="true"/>
-          <preferredSize width="800" height="150"/>
+          <preferredSize width="800" height="180"/>
         </properties>
         <border type="none"/>
         <children>
@@ -26,7 +26,7 @@
             <properties>
               <alignmentY value="0.5"/>
               <enabled value="true"/>
-              <font name="Droid Sans Mono" size="40" style="1"/>
+              <font name="Droid Sans Mono" size="48" style="1"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
               <opaque value="false"/>
@@ -38,25 +38,27 @@
           <component id="fdd61" class="javax.swing.JLabel" binding="subText">
             <constraints border-constraint="South"/>
             <properties>
-              <font name="Droid Sans" size="20" style="2"/>
+              <font name="Droid Sans" size="22" style="2"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
               <text value="Inserisci email e password per iniziare..."/>
             </properties>
           </component>
+          <vspacer id="26708">
+            <constraints border-constraint="North"/>
+          </vspacer>
         </children>
       </grid>
-      <grid id="c5341" binding="midPanel" layout-manager="FlowLayout" hgap="5" vgap="10" flow-align="1">
+      <grid id="c5341" binding="midPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints/>
         <properties>
-          <maximumSize width="800" height="250"/>
-          <minimumSize width="800" height="250"/>
-          <preferredSize width="800" height="250"/>
+          <maximumSize width="800" height="180"/>
+          <minimumSize width="800" height="180"/>
+          <preferredSize width="800" height="180"/>
         </properties>
         <border type="none"/>
         <children>
-          <grid id="d4af3" binding="emailForm" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <grid id="d4af3" binding="emailForm" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints/>
             <properties>
               <maximumSize width="400" height="75"/>
@@ -66,29 +68,31 @@
             <border type="none"/>
             <children>
               <component id="f41da" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
+                <constraints border-constraint="Center"/>
                 <properties>
                   <font name="Droid Sans Mono" size="16" style="0"/>
+                  <horizontalAlignment value="2"/>
+                  <horizontalTextPosition value="0"/>
                   <text value="Email"/>
+                  <verticalAlignment value="3"/>
                 </properties>
               </component>
               <component id="dde66" class="javax.swing.JTextField" binding="emailField">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
+                <constraints border-constraint="South"/>
                 <properties>
-                  <font name="Droid Sans Mono" size="16" style="0"/>
+                  <font name="Droid Sans Mono" size="14" style="0"/>
+                  <foreground color="-13487566"/>
+                  <horizontalAlignment value="2"/>
+                  <maximumSize width="50" height="40"/>
+                  <minimumSize width="50" height="40"/>
+                  <preferredSize width="50" height="40"/>
                   <text value=""/>
+                  <visible value="true"/>
                 </properties>
               </component>
             </children>
           </grid>
-          <grid id="272d4" binding="passwordForm" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <grid id="d9bb0" binding="passwordForm" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints/>
             <properties>
               <maximumSize width="400" height="75"/>
@@ -97,28 +101,64 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="b8fa1" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
+              <component id="a2e3d" class="javax.swing.JLabel">
+                <constraints border-constraint="Center"/>
                 <properties>
                   <font name="Droid Sans Mono" size="16" style="0"/>
-                  <text value="Email"/>
+                  <horizontalAlignment value="2"/>
+                  <horizontalTextPosition value="0"/>
+                  <text value="Password"/>
+                  <verticalAlignment value="3"/>
                 </properties>
               </component>
-              <component id="89cf" class="javax.swing.JTextField" binding="passwordField">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
+              <component id="53847" class="javax.swing.JPasswordField" binding="passwordField">
+                <constraints border-constraint="South"/>
                 <properties>
-                  <font name="Droid Sans Mono" size="16" style="0"/>
-                  <text value=""/>
+                  <maximumSize width="50" height="40"/>
+                  <minimumSize width="50" height="40"/>
+                  <opaque value="false"/>
+                  <preferredSize width="50" height="40"/>
                 </properties>
               </component>
             </children>
           </grid>
+        </children>
+      </grid>
+      <grid id="d4c14" binding="loginPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints/>
+        <properties>
+          <maximumSize width="800" height="55"/>
+          <minimumSize width="800" height="55"/>
+          <preferredSize width="800" height="55"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="4228b" class="javax.swing.JButton" binding="btnLogin">
+            <constraints/>
+            <properties>
+              <font name="Droid Sans Mono" size="14" style="1"/>
+              <horizontalTextPosition value="0"/>
+              <inheritsPopupMenu value="false"/>
+              <maximumSize width="300" height="45"/>
+              <minimumSize width="300" height="45"/>
+              <preferredSize width="300" height="45"/>
+              <text value="Login"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="efa24" binding="bottomPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints/>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="dba68" class="javax.swing.JLabel" binding="registerField">
+            <constraints/>
+            <properties>
+              <font name="Droid Sans Mono" size="14" style="2"/>
+              <text value="Non hai un account? Registrati qui..."/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
