--- a/src/main/java/GUI/Register.form
+++ b/src/main/java/GUI/Register.form
@@ -1,32 +1,216 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.Register">
-  <grid id="27dc6" binding="panel1" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="panel1" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="800" height="650"/>
     </constraints>
-    <properties/>
+    <properties>
+      <maximumSize width="800" height="650"/>
+      <minimumSize width="800" height="650"/>
+      <preferredSize width="800" height="650"/>
+    </properties>
     <border type="none"/>
     <children>
-      <grid id="2b4b9" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
+      <grid id="f3a3f" binding="topPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints/>
+        <properties>
+          <maximumSize width="800" height="150"/>
+          <minimumSize width="800" height="150"/>
+          <opaque value="true"/>
+          <preferredSize width="800" height="150"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="3c488" class="javax.swing.JLabel" binding="mainText">
+            <constraints border-constraint="Center"/>
+            <properties>
+              <alignmentY value="0.5"/>
+              <enabled value="true"/>
+              <font name="Droid Sans Mono" size="48" style="1"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <opaque value="false"/>
+              <text value="Benvenuto!"/>
+              <verticalAlignment value="3"/>
+              <verticalTextPosition value="3"/>
+            </properties>
+          </component>
+          <component id="c2988" class="javax.swing.JLabel" binding="subText">
+            <constraints border-constraint="South"/>
+            <properties>
+              <font name="Droid Sans" size="20" style="2"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <text value="Inserisci i seguenti dati per registrarti..."/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="72d17" binding="midPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints/>
+        <properties>
+          <maximumSize width="800" height="310"/>
+          <minimumSize width="800" height="310"/>
+          <preferredSize width="800" height="310"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <grid id="6b6ce" binding="emailForm" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints/>
+            <properties>
+              <maximumSize width="400" height="75"/>
+              <minimumSize width="400" height="75"/>
+              <preferredSize width="400" height="75"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="57842" class="javax.swing.JLabel">
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="16" style="0"/>
+                  <horizontalAlignment value="2"/>
+                  <horizontalTextPosition value="0"/>
+                  <text value="Email"/>
+                  <verticalAlignment value="3"/>
+                </properties>
+              </component>
+              <component id="60ce1" class="javax.swing.JTextField" binding="emailField">
+                <constraints border-constraint="South"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="14" style="0"/>
+                  <foreground color="-13487566"/>
+                  <horizontalAlignment value="2"/>
+                  <maximumSize width="50" height="40"/>
+                  <minimumSize width="50" height="40"/>
+                  <preferredSize width="50" height="40"/>
+                  <text value=""/>
+                  <visible value="true"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="d018" binding="usernameForm" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints/>
+            <properties>
+              <maximumSize width="400" height="75"/>
+              <minimumSize width="400" height="75"/>
+              <preferredSize width="400" height="75"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="ab093" class="javax.swing.JLabel">
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="16" style="0"/>
+                  <horizontalAlignment value="2"/>
+                  <horizontalTextPosition value="0"/>
+                  <text value="Username"/>
+                  <verticalAlignment value="3"/>
+                </properties>
+              </component>
+              <component id="c56aa" class="javax.swing.JTextField">
+                <constraints border-constraint="South"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="14" style="0"/>
+                  <foreground color="-13487566"/>
+                  <horizontalAlignment value="2"/>
+                  <maximumSize width="50" height="40"/>
+                  <minimumSize width="50" height="40"/>
+                  <preferredSize width="50" height="40"/>
+                  <text value=""/>
+                  <visible value="true"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="d4008" binding="passwordForm" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints/>
+            <properties>
+              <maximumSize width="400" height="75"/>
+              <minimumSize width="400" height="75"/>
+              <preferredSize width="400" height="75"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="eb6e1" class="javax.swing.JLabel">
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="16" style="0"/>
+                  <horizontalAlignment value="2"/>
+                  <horizontalTextPosition value="0"/>
+                  <text value="Password"/>
+                  <verticalAlignment value="3"/>
+                </properties>
+              </component>
+              <component id="89079" class="javax.swing.JPasswordField" binding="passwordField">
+                <constraints border-constraint="South"/>
+                <properties>
+                  <maximumSize width="50" height="40"/>
+                  <minimumSize width="50" height="40"/>
+                  <opaque value="false"/>
+                  <preferredSize width="50" height="40"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="9688a" binding="isAdminCheck" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints/>
+            <properties>
+              <maximumSize width="400" height="50"/>
+              <minimumSize width="400" height="50"/>
+              <preferredSize width="400" height="50"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="2c8f6" class="javax.swing.JCheckBox" binding="adminCheck">
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="14" style="0"/>
+                  <label value="Sto registrando un admin..."/>
+                  <text value="Sto registrando un admin..."/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+        </children>
+      </grid>
+      <grid id="33d52" binding="registerPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints/>
+        <properties>
+          <maximumSize width="800" height="55"/>
+          <minimumSize width="800" height="55"/>
+          <preferredSize width="800" height="55"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="5ccca" class="javax.swing.JButton" binding="btnRegister">
+            <constraints/>
+            <properties>
+              <font name="Droid Sans Mono" size="14" style="1"/>
+              <horizontalTextPosition value="0"/>
+              <inheritsPopupMenu value="false"/>
+              <maximumSize width="300" height="45"/>
+              <minimumSize width="300" height="45"/>
+              <preferredSize width="300" height="45"/>
+              <text value="Registrati"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="23885" binding="bottomPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints/>
         <properties/>
         <border type="none"/>
-        <children/>
+        <children>
+          <component id="1a232" class="javax.swing.JLabel" binding="registerField">
+            <constraints/>
+            <properties>
+              <font name="Droid Sans Mono" size="14" style="2"/>
+              <text value="Hai già un account? Clicca qui..."/>
+            </properties>
+          </component>
+        </children>
       </grid>
-      <hspacer id="a61de">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <vspacer id="64c60">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
     </children>
   </grid>
 </form>
