--- a/src/main/java/GUI/AdminDashboard.form
+++ b/src/main/java/GUI/AdminDashboard.form
@@ -2,12 +2,12 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.AdminDashboard">
   <grid id="27dc6" binding="panel1" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
     <constraints>
-      <xy x="20" y="20" width="1000" height="675"/>
+      <xy x="20" y="20" width="800" height="600"/>
     </constraints>
     <properties>
-      <maximumSize width="1000" height="675"/>
-      <minimumSize width="1000" height="675"/>
-      <preferredSize width="1000" height="675"/>
+      <maximumSize width="800" height="600"/>
+      <minimumSize width="800" height="600"/>
+      <preferredSize width="800" height="600"/>
     </properties>
     <border type="none"/>
     <children>
@@ -15,9 +15,9 @@
         <constraints/>
         <properties>
           <font name="Droid Sans Mono" size="36" style="1"/>
-          <maximumSize width="1000" height="190"/>
-          <minimumSize width="1000" height="190"/>
-          <preferredSize width="1000" height="190"/>
+          <maximumSize width="800" height="150"/>
+          <minimumSize width="800" height="150"/>
+          <preferredSize width="800" height="150"/>
         </properties>
         <border type="none"/>
         <children>
@@ -43,35 +43,90 @@
           </component>
         </children>
       </grid>
-      <grid id="ae9fe" binding="btnsPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+      <grid id="eadea" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints/>
-        <properties/>
+        <properties>
+          <maximumSize width="800" height="25"/>
+          <minimumSize width="800" height="25"/>
+          <preferredSize width="800" height="25"/>
+        </properties>
+        <border type="none"/>
+        <children/>
+      </grid>
+      <grid id="ae9fe" binding="btnsPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints/>
+        <properties>
+          <maximumSize width="800" height="270"/>
+          <minimumSize width="800" height="270"/>
+          <preferredSize width="800" height="270"/>
+        </properties>
         <border type="none"/>
         <children>
-          <component id="81628" class="javax.swing.JButton" binding="button1" default-binding="true">
-            <constraints/>
+          <grid id="9e79b" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints border-constraint="West"/>
             <properties>
-              <text value="Button"/>
+              <maximumSize width="400" height="250"/>
+              <minimumSize width="400" height="250"/>
+              <preferredSize width="400" height="250"/>
             </properties>
-          </component>
-          <component id="162ba" class="javax.swing.JButton" binding="button2" default-binding="true">
-            <constraints/>
+            <border type="none"/>
+            <children>
+              <component id="81628" class="javax.swing.JButton" binding="btnAggiungiVolo">
+                <constraints border-constraint="North"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="14" style="0"/>
+                  <horizontalTextPosition value="0"/>
+                  <margin top="0" left="0" bottom="0" right="0"/>
+                  <maximumSize width="150" height="125"/>
+                  <minimumSize width="150" height="125"/>
+                  <preferredSize width="150" height="125"/>
+                  <text value="Inserisci Volo"/>
+                </properties>
+              </component>
+              <component id="162ba" class="javax.swing.JButton" binding="btnAreaPersonale">
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="14" style="0"/>
+                  <maximumSize width="150" height="125"/>
+                  <minimumSize width="150" height="125"/>
+                  <preferredSize width="150" height="125"/>
+                  <text value="Area Personale"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="508ed" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints border-constraint="Center"/>
             <properties>
-              <text value="Button"/>
+              <maximumSize width="400" height="250"/>
+              <minimumSize width="400" height="250"/>
+              <preferredSize width="400" height="250"/>
             </properties>
-          </component>
-          <component id="4c43b" class="javax.swing.JButton" binding="button3" default-binding="true">
-            <constraints/>
-            <properties>
-              <text value="Button"/>
-            </properties>
-          </component>
-          <component id="60f2b" class="javax.swing.JButton" binding="button4" default-binding="true">
-            <constraints/>
-            <properties>
-              <text value="Button"/>
-            </properties>
-          </component>
+            <border type="none"/>
+            <children>
+              <component id="1e184" class="javax.swing.JButton" binding="btnViewVoli">
+                <constraints border-constraint="North"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="14" style="0"/>
+                  <horizontalTextPosition value="0"/>
+                  <maximumSize width="150" height="125"/>
+                  <minimumSize width="150" height="125"/>
+                  <preferredSize width="150" height="125"/>
+                  <text value="Visualizza Voli"/>
+                </properties>
+              </component>
+              <component id="b0521" class="javax.swing.JButton" binding="btnLogout">
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <font name="Droid Sans Mono" size="14" style="0"/>
+                  <maximumSize width="150" height="125"/>
+                  <minimumSize width="150" height="125"/>
+                  <preferredSize width="150" height="125"/>
+                  <text value="Logout"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </grid>
     </children>
