--- a/src/main/java/GUI/LandingPageLogin.form
+++ b/src/main/java/GUI/LandingPageLogin.form
@@ -55,7 +55,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="d4af3" binding="emailForm" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="d4af3" binding="usernameForm" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints/>
             <properties>
               <maximumSize width="400" height="75"/>
@@ -70,7 +70,7 @@
                   <font name="Droid Sans Mono" size="16" style="0"/>
                   <horizontalAlignment value="2"/>
                   <horizontalTextPosition value="0"/>
-                  <text value="Email"/>
+                  <text value="Username"/>
                   <verticalAlignment value="3"/>
                 </properties>
               </component>
