--- a/src/main/java/GUI/UserDashboard.form
+++ b/src/main/java/GUI/UserDashboard.form
@@ -53,7 +53,7 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="dd45c" binding="btnsPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+      <grid id="dd45c" binding="buttonPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints/>
         <properties>
           <maximumSize width="500" height="270"/>
