--- a/src/main/java/GUI/LandingPageLogin.form
+++ b/src/main/java/GUI/LandingPageLogin.form
@@ -114,9 +114,10 @@
                 <constraints border-constraint="South"/>
                 <properties>
                   <columns value="0"/>
+                  <foreground color="-16777216"/>
                   <maximumSize width="50" height="40"/>
                   <minimumSize width="50" height="40"/>
-                  <opaque value="false"/>
+                  <opaque value="true"/>
                   <preferredSize width="61" height="40"/>
                   <text value=""/>
                 </properties>
@@ -137,6 +138,7 @@
           <component id="4228b" class="javax.swing.JButton" binding="btnLogin">
             <constraints/>
             <properties>
+              <background color="-11645362"/>
               <font name="Droid Sans Mono" size="14" style="1"/>
               <horizontalTextPosition value="0"/>
               <inheritsPopupMenu value="false"/>
