--- a/src/main/java/GUI/VoliUser.form
+++ b/src/main/java/GUI/VoliUser.form
@@ -1,13 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.VoliUser">
-  <grid id="27dc6" row-count="1" column-count="1" layout-manager="GridLayoutManager">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="panel1" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+      <xy x="20" y="20" width="800" height="600"/>
     </constraints>
-    <properties/>
+    <properties>
+      <enabled value="true"/>
+      <maximumSize width="800" height="600"/>
+      <minimumSize width="800" height="600"/>
+      <preferredSize width="800" height="600"/>
+    </properties>
     <border type="none"/>
-    <children/>
+    <children>
+      <grid id="b01f0" binding="topPanel" layout-manager="FlowLayout" hgap="10" vgap="75" flow-align="1">
+        <constraints/>
+        <properties>
+          <maximumSize width="720" height="120"/>
+          <minimumSize width="720" height="120"/>
+          <preferredSize width="720" height="120"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="c8de6" class="javax.swing.JLabel" binding="listaVoli">
+            <constraints/>
+            <properties>
+              <font name="JetBrains Mono SemiBold" size="32" style="1"/>
+              <horizontalAlignment value="10"/>
+              <horizontalTextPosition value="10"/>
+              <maximumSize width="630" height="40"/>
+              <minimumSize width="630" height="40"/>
+              <preferredSize width="630" height="40"/>
+              <text value="Lista Voli Prenotabili"/>
+              <verticalAlignment value="3"/>
+              <verticalTextPosition value="3"/>
+            </properties>
+          </component>
+          <component id="18b1f" class="javax.swing.JButton" binding="btnHomepage">
+            <constraints/>
+            <properties>
+              <font name="JetBrains Mono Medium" size="14" style="0"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <maximumSize width="60" height="40"/>
+              <minimumSize width="60" height="40"/>
+              <preferredSize width="60" height="40"/>
+              <text value="Home"/>
+              <toolTipText value="Torna alla Dashboard"/>
+              <verticalAlignment value="0"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="77b17" binding="midPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints/>
+        <properties>
+          <maximumSize width="720" height="350"/>
+          <minimumSize width="720" height="350"/>
+          <preferredSize width="720" height="350"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <scrollpane id="dc9a8" binding="scrollPane">
+            <constraints border-constraint="Center"/>
+            <properties>
+              <font name="JetBrains Mono Medium" size="12" style="0"/>
+              <maximumSize width="710" height="340"/>
+              <minimumSize width="710" height="340"/>
+              <preferredSize width="710" height="340"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="abdff" class="javax.swing.JTable" binding="tabellaVoli">
+                <constraints/>
+                <properties>
+                  <autoCreateRowSorter value="true"/>
+                  <autoResizeMode value="2"/>
+                  <fillsViewportHeight value="true"/>
+                  <font name="JetBrains Mono Medium" size="12" style="0"/>
+                  <preferredSize width="71" height="40"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
+        </children>
+      </grid>
+      <grid id="ba52e" binding="bottomPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints/>
+        <properties>
+          <maximumSize width="720" height="150"/>
+          <minimumSize width="720" height="150"/>
+          <preferredSize width="720" height="150"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="6eefb" class="javax.swing.JLabel" binding="spacerBypass">
+            <constraints/>
+            <properties>
+              <horizontalAlignment value="2"/>
+              <maximumSize width="570" height="40"/>
+              <minimumSize width="570" height="40"/>
+              <preferredSize width="570" height="40"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="140fb" class="javax.swing.JButton" binding="btnBookFlight">
+            <constraints/>
+            <properties>
+              <font name="JetBrains Mono Medium" size="14" style="0"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <maximumSize width="130" height="40"/>
+              <minimumSize width="130" height="40"/>
+              <preferredSize width="130" height="40"/>
+              <text value="Prenota Volo"/>
+              <verticalAlignment value="0"/>
+              <verticalTextPosition value="0"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+    </children>
   </grid>
 </form>
