--- a/src/main/java/GUI/AdminDashboard.form
+++ b/src/main/java/GUI/AdminDashboard.form
@@ -32,7 +32,7 @@
               <verticalTextPosition value="3"/>
             </properties>
           </component>
-          <component id="19f46" class="javax.swing.JLabel">
+          <component id="19f46" class="javax.swing.JLabel" binding="subText">
             <constraints border-constraint="South"/>
             <properties>
               <font name="Droid Sans Mono" size="20" style="0"/>
@@ -53,7 +53,7 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="ae9fe" binding="btnsPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+      <grid id="ae9fe" binding="btnsPanel" layout-manager="GridBagLayout">
         <constraints/>
         <properties>
           <maximumSize width="500" height="270"/>
@@ -63,7 +63,10 @@
         <border type="none"/>
         <children>
           <grid id="9e79b" layout-manager="BorderLayout" hgap="0" vgap="0">
-            <constraints border-constraint="West"/>
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
             <properties>
               <maximumSize width="250" height="250"/>
               <minimumSize width="250" height="250"/>
@@ -84,7 +87,7 @@
                 </properties>
               </component>
               <component id="162ba" class="javax.swing.JButton" binding="btnAreaPersonale">
-                <constraints border-constraint="Center"/>
+                <constraints border-constraint="South"/>
                 <properties>
                   <font name="Droid Sans Mono" size="16" style="0"/>
                   <maximumSize width="150" height="125"/>
@@ -96,7 +99,10 @@
             </children>
           </grid>
           <grid id="508ed" layout-manager="BorderLayout" hgap="0" vgap="0">
-            <constraints border-constraint="Center"/>
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
             <properties>
               <maximumSize width="250" height="250"/>
               <minimumSize width="250" height="250"/>
@@ -116,7 +122,7 @@
                 </properties>
               </component>
               <component id="b0521" class="javax.swing.JButton" binding="btnLogout">
-                <constraints border-constraint="Center"/>
+                <constraints border-constraint="South"/>
                 <properties>
                   <font name="Droid Sans Mono" size="16" style="0"/>
                   <maximumSize width="150" height="125"/>
