--- a/src/main/java/GUI/UserDashboard.form
+++ b/src/main/java/GUI/UserDashboard.form
@@ -53,7 +53,7 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="dd45c" binding="buttonPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+      <grid id="dd45c" binding="buttonPanel" layout-manager="GridBagLayout">
         <constraints/>
         <properties>
           <maximumSize width="500" height="270"/>
@@ -63,8 +63,12 @@
         <border type="none"/>
         <children>
           <grid id="12949" layout-manager="BorderLayout" hgap="0" vgap="0">
-            <constraints border-constraint="West"/>
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
             <properties>
+              <inheritsPopupMenu value="false"/>
               <maximumSize width="250" height="250"/>
               <minimumSize width="250" height="250"/>
               <preferredSize width="250" height="250"/>
@@ -75,6 +79,7 @@
                 <constraints border-constraint="North"/>
                 <properties>
                   <font name="Droid Sans Mono" size="16" style="0"/>
+                  <hideActionText value="false"/>
                   <horizontalTextPosition value="0"/>
                   <margin top="0" left="0" bottom="0" right="0"/>
                   <maximumSize width="150" height="125"/>
@@ -84,7 +89,7 @@
                 </properties>
               </component>
               <component id="1f4f6" class="javax.swing.JButton" binding="btnAreaPersonale">
-                <constraints border-constraint="Center"/>
+                <constraints border-constraint="South"/>
                 <properties>
                   <font name="Droid Sans Mono" size="16" style="0"/>
                   <maximumSize width="150" height="125"/>
@@ -96,7 +101,10 @@
             </children>
           </grid>
           <grid id="e08ee" layout-manager="BorderLayout" hgap="0" vgap="0">
-            <constraints border-constraint="Center"/>
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
             <properties>
               <maximumSize width="250" height="250"/>
               <minimumSize width="250" height="250"/>
@@ -116,7 +124,7 @@
                 </properties>
               </component>
               <component id="ad9e4" class="javax.swing.JButton" binding="btnLogout">
-                <constraints border-constraint="Center"/>
+                <constraints border-constraint="South"/>
                 <properties>
                   <font name="Droid Sans Mono" size="16" style="0"/>
                   <maximumSize width="150" height="125"/>
