--- a/src/main/java/GUI/AreaPrivataAdmin.form
+++ b/src/main/java/GUI/AreaPrivataAdmin.form
@@ -2,12 +2,12 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.AreaPrivataAdmin">
   <grid id="27dc6" binding="panel1" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
     <constraints>
-      <xy x="20" y="20" width="700" height="500"/>
+      <xy x="20" y="20" width="630" height="380"/>
     </constraints>
     <properties>
-      <maximumSize width="700" height="500"/>
-      <minimumSize width="700" height="500"/>
-      <preferredSize width="700" height="500"/>
+      <maximumSize width="630" height="380"/>
+      <minimumSize width="630" height="380"/>
+      <preferredSize width="630" height="380"/>
     </properties>
     <border type="none"/>
     <children>
@@ -50,15 +50,15 @@
           </component>
         </children>
       </grid>
-      <grid id="fa0f2" binding="infoPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="0">
-        <margin top="5" left="0" bottom="5" right="100"/>
+      <grid id="fa0f2" binding="infoPanel" layout-manager="GridBagLayout">
         <constraints/>
         <properties>
+          <font name="JetBrains Mono Medium" size="14" style="0"/>
           <maximumSize width="620" height="120"/>
           <minimumSize width="620" height="120"/>
           <preferredSize width="620" height="120"/>
         </properties>
-        <border type="none"/>
+        <border type="none" title-justification="1" title-position="2"/>
         <children>
           <component id="1b388" class="javax.swing.JLabel">
             <constraints>
@@ -67,6 +67,7 @@
                 <preferred-size width="300" height="30"/>
                 <maximum-size width="300" height="30"/>
               </grid>
+              <gridbag top="5" left="5" bottom="5" right="5" weightx="0.0" weighty="1.0"/>
             </constraints>
             <properties>
               <font name="JetBrains Mono SemiBold" size="16" style="0"/>
@@ -83,6 +84,7 @@
                 <preferred-size width="300" height="30"/>
                 <maximum-size width="300" height="30"/>
               </grid>
+              <gridbag top="5" left="5" bottom="5" right="5" weightx="0.0" weighty="1.0"/>
             </constraints>
             <properties>
               <font name="JetBrains Mono Light" size="16" style="0"/>
@@ -96,6 +98,7 @@
                 <preferred-size width="300" height="30"/>
                 <maximum-size width="300" height="30"/>
               </grid>
+              <gridbag top="5" left="5" bottom="5" right="5" weightx="0.0" weighty="1.0"/>
             </constraints>
             <properties>
               <font name="JetBrains Mono Light" size="16" style="0"/>
@@ -109,6 +112,7 @@
                 <preferred-size width="300" height="30"/>
                 <maximum-size width="300" height="30"/>
               </grid>
+              <gridbag top="5" left="5" bottom="5" right="5" weightx="0.0" weighty="1.0"/>
             </constraints>
             <properties>
               <font name="JetBrains Mono SemiBold" size="16" style="0"/>
@@ -118,7 +122,7 @@
           </component>
         </children>
       </grid>
-      <grid id="7f302" binding="bottomPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+      <grid id="7f302" binding="bottomPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints/>
         <properties>
           <maximumSize width="620" height="80"/>
@@ -136,24 +140,6 @@
               <minimumSize width="90" height="40"/>
               <preferredSize width="90" height="40"/>
               <text value="Homepage"/>
-            </properties>
-          </component>
-          <component id="677f7" class="javax.swing.JLabel" binding="spacerBypass">
-            <constraints/>
-            <properties>
-              <maximumSize width="435" height="0"/>
-              <minimumSize width="435" height="0"/>
-              <preferredSize width="435" height="0"/>
-              <text value=""/>
-            </properties>
-          </component>
-          <component id="53a85" class="javax.swing.JButton" binding="btnModificaDati">
-            <constraints/>
-            <properties>
-              <maximumSize width="80" height="40"/>
-              <minimumSize width="80" height="40"/>
-              <preferredSize width="80" height="40"/>
-              <text value="Modifica"/>
             </properties>
           </component>
         </children>
