--- a/src/main/java/GUI/VoliAdmin.form
+++ b/src/main/java/GUI/VoliAdmin.form
@@ -2,21 +2,21 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.VoliAdmin">
   <grid id="27dc6" binding="panel1" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
     <constraints>
-      <xy x="20" y="20" width="800" height="650"/>
+      <xy x="20" y="20" width="990" height="700"/>
     </constraints>
     <properties>
-      <maximumSize width="800" height="650"/>
-      <minimumSize width="800" height="650"/>
-      <preferredSize width="800" height="650"/>
+      <maximumSize width="990" height="700"/>
+      <minimumSize width="990" height="700"/>
+      <preferredSize width="990" height="700"/>
     </properties>
     <border type="none"/>
     <children>
       <grid id="bf1ed" binding="topPanel" layout-manager="FlowLayout" hgap="10" vgap="75" flow-align="1">
         <constraints/>
         <properties>
-          <maximumSize width="720" height="120"/>
-          <minimumSize width="720" height="120"/>
-          <preferredSize width="720" height="120"/>
+          <maximumSize width="900" height="120"/>
+          <minimumSize width="900" height="120"/>
+          <preferredSize width="900" height="120"/>
         </properties>
         <border type="none"/>
         <children>
@@ -26,9 +26,9 @@
               <font name="JetBrains Mono SemiBold" size="32" style="1"/>
               <horizontalAlignment value="10"/>
               <horizontalTextPosition value="10"/>
-              <maximumSize width="630" height="40"/>
-              <minimumSize width="630" height="40"/>
-              <preferredSize width="630" height="40"/>
+              <maximumSize width="820" height="40"/>
+              <minimumSize width="820" height="40"/>
+              <preferredSize width="820" height="40"/>
               <text value="Lista Voli"/>
               <verticalAlignment value="3"/>
               <verticalTextPosition value="3"/>
@@ -53,9 +53,9 @@
       <grid id="42cfd" binding="midPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints/>
         <properties>
-          <maximumSize width="720" height="350"/>
-          <minimumSize width="720" height="350"/>
-          <preferredSize width="720" height="350"/>
+          <maximumSize width="900" height="420"/>
+          <minimumSize width="900" height="420"/>
+          <preferredSize width="900" height="420"/>
         </properties>
         <border type="none"/>
         <children>
@@ -63,9 +63,9 @@
             <constraints border-constraint="Center"/>
             <properties>
               <font name="JetBrains Mono Medium" size="12" style="0"/>
-              <maximumSize width="710" height="340"/>
-              <minimumSize width="710" height="340"/>
-              <preferredSize width="710" height="340"/>
+              <maximumSize width="890" height="410"/>
+              <minimumSize width="890" height="410"/>
+              <preferredSize width="890" height="410"/>
             </properties>
             <border type="none"/>
             <children>
@@ -86,9 +86,9 @@
       <grid id="220a5" binding="bottomPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints/>
         <properties>
-          <maximumSize width="720" height="100"/>
-          <minimumSize width="720" height="100"/>
-          <preferredSize width="720" height="100"/>
+          <maximumSize width="900" height="100"/>
+          <minimumSize width="900" height="100"/>
+          <preferredSize width="900" height="100"/>
         </properties>
         <border type="none"/>
         <children>
@@ -96,10 +96,24 @@
             <constraints/>
             <properties>
               <horizontalAlignment value="2"/>
-              <maximumSize width="570" height="40"/>
-              <minimumSize width="570" height="40"/>
-              <preferredSize width="570" height="40"/>
+              <maximumSize width="625" height="40"/>
+              <minimumSize width="625" height="40"/>
+              <preferredSize width="625" height="40"/>
               <text value=""/>
+            </properties>
+          </component>
+          <component id="fd1a0" class="javax.swing.JButton" binding="btnUpdateGate">
+            <constraints/>
+            <properties>
+              <font name="JetBrains Mono Medium" size="14" style="0"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <maximumSize width="130" height="40"/>
+              <minimumSize width="130" height="40"/>
+              <preferredSize width="130" height="40"/>
+              <text value="Aggiorna Gate"/>
+              <verticalAlignment value="0"/>
+              <verticalTextPosition value="0"/>
             </properties>
           </component>
           <component id="c8fc4" class="javax.swing.JButton" binding="btnUpdateFlight">
